--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				
 				<div class="ask">
 						
-												<p> <span class="crush">HOI CRUSH</span> <br>
-																Manhid mo, ligawan mo kaya aq</p>
+												<p> <span class="crush">HAI KAMU</span> <br>
+																Menurut kamu aku cakep atau tidak</p>
 								<div class="btn">
 <a href="yes.html"><button id="btn1">Ge</button>		</a>			    <button id="btn2">NO</button>
 								</div>				
