--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 												<p> <span class="crush">HAI KAMU</span> <br>
 																Menurut kamu aku cakep atau tidak</p>
 								<div class="btn">
-<a href="yes.html"><button id="btn1">Ge</button>		</a>			    <button id="btn2">NO</button>
+<a href="yes.html"><button id="btn1">YES</button>		</a>			    <button id="btn2">NO</button>
 								</div>				
 <img id="hands" src="img/image-removebg-preview.png" alt="">								
 				</div>					
@@ -73,7 +73,7 @@
 				</div>
 				
 				<div class="fff">
-								<p>Tiktok: Lugh_Tuatha</lugh></p>
+								<p>Instagram: 3200bu</lugh></p>
 				</div>
 				
 				<script src="proposalv2.js"></script>
