--- a/yes.html
+++ b/yes.html
@@ -16,7 +16,7 @@
 				<img src="https://c.tenor.com/s--312__jnoAAAAC/kermit-kermit-love.gif" alt="">
 				<p class="ay">hehehe terimakasih tapi lebih cakepan kamu kok<3</p>
 				<audio id="sound" controls autoplay src="y2mate.com - Buddy Castle  Youre My Honey Bunch Lyrics.mp3"></audio>
-				<p class="ay">i love you my honeybunch sugar pumpy-umpy-umpkin mwamwa</p>
+				<p class="ay">your my honeybunch sugar pumpy-umpy-umpkin mwamwa</p>
 				<img src="crykilig.jpeg" alt="">
 				</div>
 	
